tests/cases/errors/invalid-syntax/invalid-number-format/input.sym
{ :values
  [ 12.34.56
  , 0xGHI
  , 1e
  ]
}
